--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     <span id="dataTime"></span>
     <span id="dateGps"></span>
   </section>
-  <script src="/js/index.js" type="module"></script>
+  <script src="./js/index.js" type="module"></script>
 </body>
 
 </html>
