--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="icon/sunny.png" type="image/x-icon">
   <title>Weather App</title>
 </head>
 
@@ -40,7 +41,7 @@
     </div>
     <div class="containerWeather">
     </div>
-    <div class="containerDate">
+    <div class="containerDetails">
       <div>
         <label for="tempMax">Max:</label>
         <input type="text" name="tempMax" id="tempMax" disabled value="26°">
