--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/index.css">
-  <link rel="shortcut icon" href="icon/sunny.png" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon/favicon.png" type="image/x-icon">
+  <link rel="icon" href="favicon/favicon.png" type="image/x-icon">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <title>Weather App</title>
 </head>
 
