Test confg Draggable

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </div>
   <main>
-    <hr>
+    <div id="draggable" data-marker="true"></div>
     <div class="containerTime">
       <button class="tabDays">
         <h2 id="tab1"></h2>
