--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
   <meta name="msapplication-TileColor" content="#ffffff">
   <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
+  <meta name="description" content="Weather App te muestra tu clima actual segun tu ubicacion gracias a OpenWeather">
   <title>Weather App</title>
 </head>
 
 <body>
-  <div class="loader" id="loader">
+  <div class="loader" id="loader" aria-label="BackGround de carga">
     <div class="lds-ellipsis">
       <div></div>
       <div></div>
@@ -24,30 +25,30 @@
     </div>
   </div>
   <main>
-    <section>
-    <span id="tempGps"></span>
-    <span id="dataTime"></span>
-    <span id="dateGps"></span>
+    <section aria-label="Clima">
+    <span id="tempGps" aria-label="Informacion de la temperatura actual"></span>
+    <span id="dataTime" aria-label="Informacion de la fecha actual"></span>
+    <span id="dateGps" aria-label="Informacion de la ubicacion actual"></span>
   </section>
-    <div id="draggable" data-marker="true"></div>
-    <div class="containerTime">
-      <button class="tabDays">
+    <div id="draggable" data-marker="true" role="region" aria-label="Arrastable"></div>
+    <div class="containerTime" aria-label="Dias" role="region">
+      <button class="tabDays" aria-label="Boton - seleccionar pronostico del dia">
         <h2 id="tab1"></h2>
       </button>
-      <button class="tabDays">
+      <button class="tabDays" aria-label="Boton - seleccionar pronostico del dia">
         <h2 id="tab2"></h2>
       </button>
-      <button class="tabDays">
+      <button class="tabDays" aria-label="Boton - seleccionar pronostico del dia">
         <h2 id="tab3"></h2>
       </button>
-      <button class="tabDays">
+      <button class="tabDays" aria-label="Boton - seleccionar pronostico del dia">
         <h2 id="tab4"></h2>
       </button>
 
     </div>
-    <div class="containerWeather">
+    <div class="containerWeather" aria-label="Pronostico" role="region">
     </div>
-    <div class="containerDetails">
+    <div class="containerDetails" aria-label="Detalles Pronostico" role="region">
       <div>
         <label for="tempMax">Max:</label>
         <input type="text" name="tempMax" id="tempMax" disabled value="26°">
